Fix horizontal scrolling sticky position e.g. users on a small screen - this fixes scrolling long horizontal lists you see a border on the left side but also content on the other side of the border. The content scrolls beneath the left border.

--- a/resources/css/elements/tables.css
+++ b/resources/css/elements/tables.css
@@ -132,7 +132,7 @@
     }
 
     tbody .checkbox-column {
-        @apply sticky px-3 -start-px;
+        @apply px-3 -start-px sticky -left-1.5;
         .data-table--contained & {
             @apply sticky ps-4;
         }
